# serial-opcua-gateway

./: .gitignore  README.rst  pyproject.toml
pyserver/: conf.py  main.py  opc_conf.yml  serial_conf.yml
tests/: test_pyserver.py
